[gd_scene load_steps=22 format=3 uid="uid://n0m0w8hbstne"]

[ext_resource type="Script" path="res://NPC/Yaga.gd" id="1_yfwbp"]
[ext_resource type="Texture2D" uid="uid://8h14i4xk38ji" path="res://Sprites/Characters/Yaga.png" id="2_4oxy3"]
[ext_resource type="PackedScene" uid="uid://bil3yh8nxalg2" path="res://NPC/dialogue.tscn" id="3_5uv0t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iriro"]
atlas = ExtResource("2_4oxy3")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp7f4"]
atlas = ExtResource("2_4oxy3")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2oeq"]
atlas = ExtResource("2_4oxy3")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52ve"]
atlas = ExtResource("2_4oxy3")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ubd"]
atlas = ExtResource("2_4oxy3")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvle6"]
atlas = ExtResource("2_4oxy3")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwa0y"]
atlas = ExtResource("2_4oxy3")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm7io"]
atlas = ExtResource("2_4oxy3")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mhe"]
atlas = ExtResource("2_4oxy3")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbjo8"]
atlas = ExtResource("2_4oxy3")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13sdm"]
atlas = ExtResource("2_4oxy3")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk7wb"]
atlas = ExtResource("2_4oxy3")
region = Rect2(176, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ntp"]
atlas = ExtResource("2_4oxy3")
region = Rect2(192, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36hsm"]
atlas = ExtResource("2_4oxy3")
region = Rect2(208, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmrg1"]
atlas = ExtResource("2_4oxy3")
region = Rect2(224, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ojs7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iriro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp7f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2oeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ubd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvle6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwa0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm7io")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbjo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13sdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk7wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ntp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36hsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmrg1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcocj"]
size = Vector2(10, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_xdqmi"]
radius = 38.0

[node name="Yaga" type="CharacterBody2D"]
script = ExtResource("1_yfwbp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_ojs7k")
animation = &"Idle"
frame = 5
frame_progress = 0.930314

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_lcocj")

[node name="ChatDetectionArea" type="Area2D" parent="."]
position = Vector2(0, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetectionArea"]
shape = SubResource("CircleShape2D_xdqmi")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialogue" parent="." instance=ExtResource("3_5uv0t")]

[connection signal="body_entered" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="dialogue_finished" from="Dialogue" to="." method="_on_dialogue_dialogue_finished"]
